tests/dataset/tpc-h/compiler/cpp/q19.error
/tmp/TestCPPCompiler_TPCHQueriesq193124828266/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq193124828266/001/prog.cpp:142:27: error: ‘l’ was not declared in this scope
  142 |     std::vector<decltype((l.l_extendedprice * ((1 - l.l_discount))))> __items;
      |                           ^
/tmp/TestCPPCompiler_TPCHQueriesq193124828266/001/prog.cpp:142:69: error: template argument 1 is invalid
  142 |     std::vector<decltype((l.l_extendedprice * ((1 - l.l_discount))))> __items;
      |                                                                     ^
/tmp/TestCPPCompiler_TPCHQueriesq193124828266/001/prog.cpp:142:69: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq193124828266/001/prog.cpp:212:17: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  212 |         __items.push_back((l.l_extendedprice * ((1 - l.l_discount))));
      |                 ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq193124828266/001/prog.cpp: In instantiation of ‘main()::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCHQueriesq193124828266/001/prog.cpp:219:5:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq193124828266/001/prog.cpp:218:30: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  218 |     return std::accumulate(v.begin(), v.end(), 0.0);
      |                            ~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq193124828266/001/prog.cpp:218:41: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  218 |     return std::accumulate(v.begin(), v.end(), 0.0);
      |                                       ~~^~~
